# test_cmake_gtest

./: CMakeLists.txt  README.md
include/: library.h
src/: library.cpp
testsuite/: CMakeLists.txt
testsuite/src/: library_test.cpp
